input search z-index fix

--- a/src/assets/scss/_select_search.scss
+++ b/src/assets/scss/_select_search.scss
@@ -15,7 +15,7 @@
   left: calc(1.95rem + 1.5rem);
   width: calc(100% - (1.95rem + 2.4rem));
   margin-bottom:1.5rem;
-  z-index: 2;
+  z-index: 6; /* VInputFile uses 0,3,5. This must be greater */
 }
 
 .valium-reactstrap-select-search .valium-reactstrap-select-search-list-item {
